# juniper

./: .gitignore  Build.sh  CMakeLists.txt  CMakeSettings.json  Entry.cpp  README.md  Setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-request.md  feature_request.md  other-question.md  platform-support.md
cmake/: JuniperSetup.cmake.txt
dependencies/: CMakeLists.txt
dependencies/moodycamel/: CMakeLists.txt
include/: App.h  Juniper.h
juniper/: App.cpp  App.h  CMakeLists.txt  Core.h  Juniper.h  juniper.h
juniper/dependencies/: CMakeLists.txt
juniper/dependencies/spdlog/: CMakeLists.txt  tweakme.h
juniper/logger/: CMakeLists.txt  Logger.cpp  Logger.h  logger.cpp  logger.h
juniper/src/: App.cpp  App.h  CMakeLists.txt  Core.h  Juniper.h
juniper/src/logger/: CMakeLists.txt  Logger.cpp  Logger.h
juniper/src/world/: Chunk.cpp  Chunk.h  Level.cpp  Level.h  World.cpp  World.h
juniper/world/: CMakeLists.txt  Chunk.h  World.cpp  World.h
scripts/: Build.sh  build-unix.sh  build-windows.bat  setup-unix.sh
src/: App.cpp  CMakeLists.txt
src/logger/: CMakeLists.txt
util/: CMakeInstall.sh
